crates/cli/tests/snapshots/snapshot_tests__json_health_with_production_coverage.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "schema_version": 3,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "findings": [
    {
      "path": "src/complex.ts",
      "name": "processData",
      "line": 42,
      "col": 0,
      "cyclomatic": 25,
      "cognitive": 30,
      "line_count": 120,
      "param_count": 0,
      "exceeded": "both",
      "severity": "high",
      "actions": [
        {
          "type": "refactor-function",
          "auto_fixable": false,
          "description": "Refactor `processData` to reduce complexity (extract helper functions, simplify branching)",
          "note": "Consider splitting into smaller functions with single responsibilities"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the function declaration",
          "comment": "// fallow-ignore-next-line complexity",
          "placement": "above-function-declaration"
        }
      ]
    }
  ],
  "summary": {
    "files_analyzed": 50,
    "functions_analyzed": 200,
    "functions_above_threshold": 1,
    "max_cyclomatic_threshold": 20,
    "max_cognitive_threshold": 15,
    "severity_critical_count": 0,
    "severity_high_count": 1,
    "severity_moderate_count": 0
  },
  "production_coverage": {
    "verdict": "cold-code-detected",
    "summary": {
      "functions_total": 6,
      "functions_called": 3,
      "functions_never_called": 2,
      "functions_coverage_unavailable": 1,
      "percent_dead_in_production": 33.3
    },
    "findings": [
      {
        "path": "src/cold.ts",
        "function": "coldPath",
        "line": 14,
        "state": "never-called",
        "invocations": 0,
        "confidence": "high",
        "actions": [
          {
            "type": "review-deletion",
            "description": "Tracked in production coverage with zero invocations.",
            "auto_fixable": false
          }
        ]
      },
      {
        "path": "src/unknown.ts",
        "function": "lateBound",
        "line": 8,
        "state": "coverage-unavailable",
        "invocations": 0,
        "confidence": "low",
        "actions": [
          {
            "type": "collect-production-coverage",
            "description": "Collect a broader production dump.",
            "auto_fixable": false
          }
        ]
      }
    ],
    "hot_paths": [
      {
        "path": "src/hot.ts",
        "function": "hotPath",
        "line": 3,
        "invocations": 250
      }
    ],
    "watermark": "license-expired-grace",
    "warnings": [
      {
        "code": "partial-input",
        "message": "One dump was incomplete."
      }
    ]
  }
}
